--- a/..html
+++ b/..html
@@ -253,7 +253,7 @@ First setup the R envirnoment</p>
 <pre><code class="r">  max_interval_data &lt;- subset(interval_steps_data, Steps == max(interval_steps_data$Steps))
 </code></pre>
 
-<p>The interval that contains the maximum number of steps is 835</p>
+<p>The interval that contains the maximum number of steps is 206.1698113 on time interval 835</p>
 
 <p>###Here we provide a solution for the NA&#39;s. We will use the average of that interval across all data to fill in the NA&#39;s</p>
 
